--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "subugoe/counter-client",
     "version": "1.0.0",
-    "description": "",
+    "description": "Counterbike PHP Client",
     "keywords": [
         "openapitools",
         "openapi-generator",
@@ -19,21 +19,23 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.4.0",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^7.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~2.12"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.6",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "nikic/php-parser": "4.10.4",
+        "rector/rector": "^0.10.17"
     },
     "autoload": {
         "psr-4": { "Subugoe\\CounterClient\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "Subugoe\\CounterClient\\" : "test/" }
+        "psr-4": { "Subugoe\\CounterClient\\Test\\" : "test/" }
     }
 }
