--- a/composer.json
+++ b/composer.json
@@ -18,22 +18,40 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.2",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^7.3"
+        "guzzlehttp/guzzle": "^7.9"
     },
+
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.6",
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "rector/rector": "^0.11.43"
+        "phpunit/phpunit": "^10.5",
+        "squizlabs/php_codesniffer": "^3.10",
+        "friendsofphp/php-cs-fixer": "^3.59",
+        "rector/rector": "^1.0"
     },
+
     "autoload": {
-        "psr-4": { "Subugoe\\CounterClient\\" : "lib/" }
+        "psr-4": {
+            "Subugoe\\CounterClient\\": "lib/"
+        }
     },
+
     "autoload-dev": {
-        "psr-4": { "Subugoe\\CounterClient\\Test\\" : "test/" }
+        "psr-4": {
+            "Subugoe\\CounterClient\\Test\\": "test/"
+        }
+    },
+    "scripts": {
+      "cleanup": [
+        "rector process",
+        "php-cs-fixer fix"
+      ],
+      "lint": [
+        "php-cs-fixer fix --dry-run --diff",
+        "rector process --dry-run",
+        "phpstan analyze src"
+      ]
     }
 }
